Add signup option in navigation

--- a/map.html
+++ b/map.html
@@ -34,6 +34,8 @@
     <a href="securite.html">Sécurité</a>
     <a href="aide.html">Aide</a>
     <a href="about.html">À propos</a>
+    <a href="login.html" id="login-link">Connexion</a>
+    <a href="signup.html" id="signup-link">Inscription</a>
     <a href="#" id="logout-link">Déconnexion</a>
     <span id="user-info"></span>
 </nav>
