Add policy acceptance and signup link

--- a/login.html
+++ b/login.html
@@ -32,6 +32,7 @@
     </form>
     <button id="google-login" class="button" style="margin-top:1em;">Connexion avec Google</button>
     <p><a href="#">Mot de passe oublié ?</a></p>
+    <p><a href="signup.html">S'inscrire et se créer un compte</a></p>
   </main>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
