Persist profile info and update interface

--- a/profil.html
+++ b/profil.html
@@ -23,6 +23,7 @@
 </nav>
 <main>
     <h1>Mon Profil</h1>
+    <div class="profile-container">
     <form id="profile-form">
         <label for="name">Nom ou surnom :</label>
         <input type="text" id="name" name="name" required>
@@ -38,6 +39,7 @@
         <img id="photo-preview" class="popup-photo" style="display:none;">
         <button type="submit" class="button">Sauvegarder</button>
     </form>
+    </div>
 </main>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
