Store and display likes

--- a/favoris.html
+++ b/favoris.html
@@ -27,6 +27,7 @@
     <div id="fav-list"></div>
     <section id="likes-section">
         <h2>Likes reçus</h2>
+        <p id="likes-count"></p>
         <ul id="like-list"></ul>
     </section>
 </main>
