Fix styling to only apply dark theme to message page

--- a/message.html
+++ b/message.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <title>Messages</title>
 </head>
-<body data-auth="required">
+<body class="message-page" data-auth="required">
 <nav>
     <img src="logozwizz.png" alt="Zwizz" class="logo">
     <a href="accueil.html">Accueil</a>
