feat(nav): add responsive drawer menu

--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,24 @@
 <nav aria-label="Navigation">
   <a href="accueil.html"><img src="logozwizz.png" alt="Zwizz" class="logo"></a>
+  <button id="menu-btn" class="menu-btn" aria-label="Menu">&#9776;</button>
+  <div class="nav-links">
+    <a href="accueil.html">Accueil</a>
+    <a href="map.html">Carte</a>
+    <a href="profil.html">Profil</a>
+    <a href="favoris.html">Favoris</a>
+    <a href="securite.html">Sécurité</a>
+    <a href="aide.html">Aide</a>
+    <a href="about.html">À propos</a>
+    <a href="message.html">Messages</a>
+    <a href="login.html" id="login-link">Connexion</a>
+    <a href="signup.html" id="signup-link">Inscription</a>
+    <a href="#" id="logout-link">Déconnexion</a>
+    <span id="user-info"></span>
+  </div>
+</nav>
+<div id="drawer-overlay" class="drawer-overlay"></div>
+<div id="drawer" class="drawer">
+  <button id="drawer-close" class="drawer-close" aria-label="Fermer">&#10005;</button>
   <a href="accueil.html">Accueil</a>
   <a href="map.html">Carte</a>
   <a href="profil.html">Profil</a>
@@ -8,8 +27,7 @@
   <a href="aide.html">Aide</a>
   <a href="about.html">À propos</a>
   <a href="message.html">Messages</a>
-  <a href="login.html" id="login-link">Connexion</a>
-  <a href="signup.html" id="signup-link">Inscription</a>
-  <a href="#" id="logout-link">Déconnexion</a>
-  <span id="user-info"></span>
-</nav>
+  <a href="login.html" id="drawer-login">Connexion</a>
+  <a href="signup.html" id="drawer-signup">Inscription</a>
+  <a href="#" id="drawer-logout">Déconnexion</a>
+</div>
