--- a/map.html
+++ b/map.html
@@ -43,6 +43,13 @@
     </div>
     <div id="map" style="height: 80vh;"></div>
     <button id="remove-pin" class="button" style="margin-top:1em;">Supprimer mon pin</button>
+    <div id="message-overlay" class="modal-overlay" style="display:none;"></div>
+    <div id="message-modal" class="modal" style="display:none;">
+        <form id="message-modal-form">
+            <textarea id="message-modal-text" placeholder="Écrire un message" required></textarea>
+            <button type="submit" class="button">Envoyer</button>
+        </form>
+    </div>
 </main>
 <!-- Load Leaflet with CDN fallback -->
 <script>
