--- a/map.html
+++ b/map.html
@@ -43,13 +43,6 @@
     </div>
     <div id="map" style="height: 80vh;"></div>
     <button id="remove-pin" class="button" style="margin-top:1em;">Supprimer mon pin</button>
-    <div id="message-overlay" class="modal-overlay" style="display:none;"></div>
-    <div id="message-modal" class="modal" style="display:none;">
-        <form id="message-modal-form">
-            <textarea id="message-modal-text" placeholder="Écrire un message" required></textarea>
-            <button type="submit" class="button">Envoyer</button>
-        </form>
-    </div>
 </main>
 <!-- Load Leaflet with CDN fallback -->
 <script>
@@ -76,5 +69,14 @@
 <script src="auth.js"></script>
 <script src="script.js"></script>
 <script>fetch("nav.html").then(r=>r.text()).then(html=>{document.getElementById("nav-container").innerHTML=html;initAuthGuard(true);initDrawer();});</script>
+<div id="message-overlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:#00000099; z-index:998;"></div>
+
+<div id="message-modal" style="display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#111; padding:20px; border-radius:12px; z-index:999; width:90%; max-width:400px;">
+  <form id="message-modal-form">
+    <label for="message-modal-text" style="color:white;">Ton message :</label><br>
+    <textarea id="message-modal-text" rows="4" style="width:100%; border-radius:8px; padding:10px; margin-top:10px;"></textarea><br><br>
+    <button type="submit" style="background:#822fff; color:white; border:none; border-radius:10px; padding:10px 20px; font-weight:bold;">Envoyer</button>
+  </form>
+</div>
 </body>
 </html>
